# libpressio-qoi

./: .gitignore  CMakeLists.txt  callgrind.out.28728  callgrind.out.33678  fraz.cpp  iterate.cpp  load.sh  note.md  opt_binary copy.cpp  opt_demo copy 2.cpp  opt_demo.cpp  opt_zfp.cpp  sz3_demo.cpp  zfp_demo.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
utils/: FileUtils.hpp  MemoryUtil.hpp
